--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
     <!-- END ABOUT -->
 
     <!-- START EXPERIENCE -->
-    <section class="experience fixed" id="experience">
+    <!-- <section class="experience fixed" id="experience">
         <div class="experience__container">
             <h1>EXPERIENCE AREA</h1>
         </div>
-    </section>
+    </section> -->
     <!-- END EXPERIENCE -->
 
     <!-- START SKILLS -->
@@ -186,11 +186,84 @@
             </div>
             <div class="skills__container__article">
                 <p class="skills__container__article_item">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A, magni eaque laudantium magnam iure mollitia laboriosam at vitae nobis? Voluptatibus natus vero sed magnam quidem fugiat amet, accusamus, quo ab pariatur eaque voluptas mollitia odio repellendus velit quibusdam aperiam facere?
+                    こちらでは私、kohtaのスキルについてご覧いただくことが可能です。主にフロントエンドを中心にバックエンド、また開発に必要なスキルの詳細を記載しております。
+                    また各スキルには１〜５までの数字が振られておりこちらの数字につきましてはセクション下段をご参照ください。
                 </p>
             </div>
-            <div class="skills__container__chartarea">
-                
+            <div class="skills__container__skills">
+                    <!-- FRONTEND -->
+                    <div class="skills__container__skills__area">
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/html5-original-wordmark.svg" alt="HTML5" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/css3-original-wordmark.svg" alt="CSS3" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/sass-original.svg" alt="Sass" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/tailwindcss.svg" alt="Tailwind CSS" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/javascript-original.svg" alt="JavaScript" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/react-original-wordmark.svg" alt="React" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                    </div>
+                    <!-- BACKEND -->
+                    <div class="skills__container__skills__area">
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/go-original.svg" alt="Go" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/java-original-wordmark.svg" alt="Java" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/php-original.svg" alt="PHP" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/python-original.svg" alt="Python" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/javascript-original.svg" alt="JavaScript" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                    </div>
+                    <!-- OTHERS -->
+                    <div class="skills__container__skills__area">
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/go-original.svg" alt="Go" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/java-original-wordmark.svg" alt="Java" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/php-original.svg" alt="PHP" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/python-original.svg" alt="Python" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/javascript-original.svg" alt="JavaScript" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        </div>
+                    </div>
             </div>
             <div class="skills__container__itemarea">
                 <p class="skills__container__itemarea_item">
