--- a/index.html
+++ b/index.html
@@ -193,74 +193,87 @@
             <div class="skills__container__skills">
                     <!-- FRONTEND -->
                     <div class="skills__container__skills__area">
+                        <div class="skills__container__skills__area_title">
+                            <h1>FRONTEND</h1>
+                        </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/html5-original-wordmark.svg" alt="HTML5" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">4</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/css3-original-wordmark.svg" alt="CSS3" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">3</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/sass-original.svg" alt="Sass" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">2</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/tailwindcss.svg" alt="Tailwind CSS" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">3</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/javascript-original.svg" alt="JavaScript" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">3</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/react-original-wordmark.svg" alt="React" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">2</h1>
                         </div>
                     </div>
                     <!-- BACKEND -->
                     <div class="skills__container__skills__area">
+                        <div class="skills__container__skills__area_title">
+                            <h1>BACKEND</h1>
+                        </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/go-original.svg" alt="Go" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">2</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/java-original-wordmark.svg" alt="Java" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">1</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/php-original.svg" alt="PHP" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">1</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/python-original.svg" alt="Python" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">2</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
-                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/javascript-original.svg" alt="JavaScript" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/mysql-original-wordmark.svg" alt="MySQL" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">2</h1>
                         </div>
                     </div>
                     <!-- OTHERS -->
                     <div class="skills__container__skills__area">
-                        <div class="skills__container__skills__area_item">
-                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/go-original.svg" alt="Go" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                        <div class="skills__container__skills__area_title">
+                            <h1>OTHERS</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
-                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/java-original-wordmark.svg" alt="Java" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/c-original.svg" alt="C" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">2/h1>
                         </div>
                         <div class="skills__container__skills__area_item">
-                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/php-original.svg" alt="PHP" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/linux-original.svg" alt="Linux" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">2</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
-                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/python-original.svg" alt="Python" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/amazonwebservices-original-wordmark.svg" alt="AWS" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">1</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
-                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/javascript-original.svg" alt="JavaScript" height="50" />
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/git-scm-icon.svg" alt="Git" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">4</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/docker-original-wordmark.svg" alt="Docker" height="50" />
+                            <h1 class="skills__container__skills__area_item_number">3</h1>
+                        </div>
+                        <div class="skills__container__skills__area_item">
+                            <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/figma-icon.svg" alt="Figma" height="50" />
                             <h1 class="skills__container__skills__area_item_number">5</h1>
                         </div>
                     </div>
