--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/c-original.svg" alt="C" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">2/h1>
+                            <h1 class="skills__container__skills__area_item_number">2</h1>
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/linux-original.svg" alt="Linux" height="50" />
@@ -280,8 +280,9 @@
             </div>
             <div class="skills__container__itemarea">
                 <p class="skills__container__itemarea_item">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quis itaque dolores voluptatum unde voluptatibus quod nam est, provident tempora laboriosam doloribus nostrum laudantium dolorem iusto repellat! Repudiandae, quis neque?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quis itaque dolores voluptatum unde voluptatibus quod nam est, provident tempora laboriosam doloribus nostrum laudantium dolorem iusto repellat! Repudiandae, quis neque?
+                    こちらの数字は私のスキルレベルを示しています。５段階評価で　1:基本文法を勉強し理解している　2:勉強を元に何か一つでも成果物を作成し切った 3:実際にインターンなどの業務で使用経験あり
+                    4: 実務でもバリバリこなせるレベル 5:ガチレベル（何も困らない）となっています。
+
                 </p>
             </div>
         </div>
