change aboutarea container

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
             <div class="about__container__main">
                 <div class="about__container__main_left">
                     <p>
-                            私は現在、学習院大学法学部の大学1年生です。<br>
-                            プログラミングは高校3年性の冬から初めもう少しで1年が経ちます。また、
-                            大学のインターンメンバーやエンジニアと交流しながら、日々勉強し、技術力を高めています。
+                            私の名前は河内光太（こうち こうた）といい、学習院大学法学部法学科の1年生生です。<br>
+                            プログラミングは高校3年性の冬から初めちょうど1年が経ちます。<br>
+                            現在はインターンのメンバーや様々なエンジニアと交流しながら日々勉強し技術力を高めています。
                         <br>
                         <br>
-                            最近の活動として大学生専用のエンジニアコミュニティ「ENTER」を自分で立ち上げ、会員数を順調に増やしながら運営・管理をしています。
+                            最近の活動として大学生専用のエンジニアコミュニティ「ENTER」を自ら立ち上げ、会員数を順調に増やしながら運営・管理をしています。
                         <br>
                         <br>
                         <br>
@@ -282,6 +282,7 @@
                 <p class="skills__container__itemarea_item">
                     こちらの数字は私のスキルレベルを示しています。５段階評価で　1:基本文法を勉強し理解している　2:勉強を元に何か一つでも成果物を作成し切った 3:実際にインターンなどの業務で使用経験あり
                     4: 実務でもバリバリこなせるレベル 5:ガチレベル（何も困らない）となっています。
+
                 </p>
             </div>
         </div>
