add contact area title

--- a/index.html
+++ b/index.html
@@ -302,7 +302,12 @@
     <!-- START CONTACT -->
     <section class="contact fixed" id="contact">
         <div class="contact__container">
-            <h1>CONTACT AREA</h1>
+            <div class="about__container__title">
+                <h2 class="about__container__title_item"><span class="about__container__title_span">05.</span>Contact</h2>
+            </div>
+            <div class="contact__container__area">
+                
+            </div>
         </div>
     </section>
     <!-- END CONTACT -->
