--- a/index.html
+++ b/index.html
@@ -306,7 +306,19 @@
                 <h2 class="about__container__title_item"><span class="about__container__title_span">05.</span>Contact</h2>
             </div>
             <div class="contact__container__area">
-                
+                <h2 class="contact__container__area_article">
+                    こちらのボタンからご連絡ください！<br>
+                    各SNSからのご連絡も大歓迎です!!<br>
+                </h2>
+                <a  class="hero__content_button contact__container__area_button" href="mailto:kohta0421kochi@gmail.com">Get in Touch</a>
+                <div class="sns__btn contact__container__area_sns">
+                    <ul>
+                        <li class="sns__btn--item contact__container__area_sns_item"><a href="https://www.instagram.com/k_95.21/"><img src="./assets/icon/instagram.svg" alt=""></a></li>
+                        <li class="sns__btn--item contact__container__area_sns_item"><a href="https://www.facebook.com/"><img src="./assets/icon/facebook.svg" alt=""></a></li>
+                        <li class="sns__btn--item contact__container__area_sns_item"><a href="https://twitter.com/?lang=ja"><img src="./assets/icon/twitter.svg" alt=""></a></li>
+                        <li class="sns__btn--item contact__container__area_sns_item"><a href="https://github.com/kohta9521"><img src="./assets/icon/github.svg" alt=""></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
