add page top button but dont move button area

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
     <!-- START FOOTER -->
     <foote class="footer" id="footer">
         <div class="footer__container">
+            <p id="page-top footer__container__pagetop_btn"><a href="#">Page Top</a></p>
             <h1>FOOTER AREA</h1>
         </div>
     </foote>
@@ -329,6 +330,8 @@
     <!-- JS -->
     <script src="./js/main.js"></script>
     <script src="./js/chart.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
