add footer areea items scss

--- a/index.html
+++ b/index.html
@@ -320,8 +320,10 @@
     <!-- START FOOTER -->
     <foote class="footer" id="footer">
         <div class="footer__container">
-            <p id="page-top footer__container__pagetop_btn"><a href="#">Page Top</a></p>
-            <h1>FOOTER AREA</h1>
+            <p id="page-top footer__container__pagetopbtn"><a href="#">Page Top</a></p>
+            <div class="footer__container__namearea">
+                <p class="footer__container__namearea_item">Kohta Portfolio Site</p>
+            </div>
         </div>
     </foote>
     <!-- END FOOTER -->
