--- a/index.html
+++ b/index.html
@@ -295,6 +295,59 @@
             <div class="work__container__title">
                 <h2 class="work__container__title_item"><span class="about__container__title_span">03.</span>Some Things I’ve Built</h2>
             </div>
+            <div class="work__container__area">
+                <!-- item1 -->
+                <div class="work__container__area__item">
+                    <div class="work__container__area__item__left">
+                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
+                    </div>
+                    <div class="work__container__area__item__right">
+                        <h2 class="work__container__area__item__right_title">title</h2>
+                        <p class="work__container__area__item__right__article">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
+                        </p>
+                        <div class="work__container__area__item__right_lang">
+                            <p class="work__container__area__item__right_lang_item">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, iure?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- item2 -->
+                <div class="work__container__area__item">
+                    <div class="work__container__area__item__left">
+                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
+                    </div>
+                    <div class="work__container__area__item__right">
+                        <h2 class="work__container__area__item__right_title">title</h2>
+                        <p class="work__container__area__item__right__article">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
+                        </p>
+                        <div class="work__container__area__item__right_lang">
+                            <p class="work__container__area__item__right_lang_item">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, iure?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- item3 -->
+                <div class="work__container__area__item">
+                    <div class="work__container__area__item__left">
+                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
+                    </div>
+                    <div class="work__container__area__item__right">
+                        <h2 class="work__container__area__item__right_title">title</h2>
+                        <p class="work__container__area__item__right__article">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
+                        </p>
+                        <div class="work__container__area__item__right_lang">
+                            <p class="work__container__area__item__right_lang_item">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, iure?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- END WORK -->
