add workarea constructure

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     </div>
                 </div>
                 <!-- item2 -->
-                <div class="work__container__area__item">
+                <!-- <div class="work__container__area__item">
                     <div class="work__container__area__item__left">
                         <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
                     </div>
@@ -329,9 +329,9 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- item3 -->
-                <div class="work__container__area__item">
+                <!-- <div class="work__container__area__item">
                     <div class="work__container__area__item__left">
                         <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
                     </div>
@@ -346,7 +346,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
