add worksarea img and resize

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <!-- item1 -->
                 <div class="work__container__area__item">
                     <div class="work__container__area__item__left">
-                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
+                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" >
                     </div>
                     <div class="work__container__area__item__right">
                         <h2 class="work__container__area__item__right_title">title</h2>
