readd work item2 3

--- a/index.html
+++ b/index.html
@@ -317,33 +317,33 @@
                 <div class="work__container__area__item">
 
                     <div class="work__container__area__item__right">
-                        <h2 class="work__container__area__item__right_title">title</h2>
-                        <p class="work__container__area__item__right__article">
+                        <h2 class="work__container__area__item__right_title">株式会社REGAL CORE様 ホームページ製作</h2>
+                        <p class="work__container__area__item__right_article">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, iure?
+                                HTML/CSS/SCSS/JavaScript
                             </p>
                         </div>
                     </div>                    
                     <div class="work__container__area__item__left">
-                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
+                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" >
                     </div>
                 </div>
                 <!-- item3 -->
                 <div class="work__container__area__item">
                     <div class="work__container__area__item__left">
-                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" width="400px">
+                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" >
                     </div>
                     <div class="work__container__area__item__right">
-                        <h2 class="work__container__area__item__right_title">title</h2>
-                        <p class="work__container__area__item__right__article">
+                        <h2 class="work__container__area__item__right_title">株式会社REGAL CORE様 ホームページ製作</h2>
+                        <p class="work__container__area__item__right_article">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, iure?
+                                HTML/CSS/SCSS/JavaScript
                             </p>
                         </div>
                     </div>
