add experience area

--- a/index.html
+++ b/index.html
@@ -171,11 +171,61 @@
     <!-- END ABOUT -->
 
     <!-- START EXPERIENCE -->
-    <!-- <section class="experience fixed" id="experience">
-        <div class="experience__container">
-            <h1>EXPERIENCE AREA</h1>
-        </div>
-    </section> -->
+        <section class="experience fixed" id="experience">
+            <div class="experience__container">
+                <div class="skills__container__title">
+                    <h2 class="skills__container__title_item"><span class="about__container__title_span">02.</span>Experience</h2>
+                </div>
+                <div class="experience__container__area">
+                    <div class="experience__container__area__left">
+                        <h2 class="experience__container__area__left__title">これまでの経歴</h2>
+                        <p class="experience__container__area__left__article">
+                            高校3年生の1月、知人の紹介でProgatew始めのめり込む<br>
+                            ↓
+                        </p>
+                        <p class="experience__container__area__left__article">
+                            書籍を購入し始め自分でWebページを作るようになってくる（ここでは静的サイト）<br>
+                            ↓
+                        </p>
+                        <p class="experience__container__area__left__article">
+                            6月 プログラミングサークル「POSSE」に入会<br>
+                            自分よりも数段先に行っている同世代を見てやる気が出る<br>
+                            ↓
+                        </p>
+                        <p class="experience__container__area__left__article">
+                            JavaScriptの勉強を始め動的サイトの制作を始める<br>
+                            ↓
+                        </p>
+                        <p class="experience__container__area__left__article">
+                            知人の紹介からweb系のインターンを始める<br>
+                            ↓
+                        </p>
+                        <p class="experience__container__area__left__article">
+                            さらに大学生エンジニアとのつながり、技術力向上の場が欲しくなり
+                            大学生エンジニアコミュニティ「ENTER」を設立
+                        </p>
+                    </div>
+                    <div class="experience__container__area__right">
+                        <h2 class="experience__container__area__right__title">作製物例</h2>
+                            <p class="experience__container__area__right__article">
+                                ex.)写真家の友人のためにポートフォリオサイトを作製
+                            </p>
+                            <p class="experience__container__area__right__article">
+                                ex.)ハッカソンイベントにてサークル紹介サイトの作成
+                            </p>
+                            <p class="experience__container__area__right__article">
+                                ex.)友人と共同でサークル紹介サイトを作成
+                            </p>
+                            <p class="experience__container__area__right__article">
+                                ex.)ハッカソンイベントにてティンダー風マッチングサイトの作成
+                            </p>
+                            <p class="experience__container__area__right__article">
+                                ex.)ENTER公式サイトの作成
+                            </p>
+                    </div> 
+                </div>
+            </div>
+        </section>
     <!-- END EXPERIENCE -->
 
     <!-- START SKILLS -->
