--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             ↓
                         </p>
                         <p class="experience__container__area__left__article">
-                            JavaScriptの勉強を始め動的サイトの制作を始める<br>
+                            JavaScriptの勉強を始め動きのあるサイトの制作を始める<br>
                             ↓
                         </p>
                         <p class="experience__container__area__left__article">
@@ -324,7 +324,7 @@
                         </div>
                         <div class="skills__container__skills__area_item">
                             <img style="margin: 10px" src="https://profilinator.rishav.dev/skills-assets/figma-icon.svg" alt="Figma" height="50" />
-                            <h1 class="skills__container__skills__area_item_number">5</h1>
+                            <h1 class="skills__container__skills__area_item_number">4</h1>
                         </div>
                     </div>
             </div>
@@ -354,7 +354,7 @@
                     <div class="work__container__area__item__right">
                         <h2 class="work__container__area__item__right_title">株式会社REGAL CORE様 ホームページ製作</h2>
                         <p class="work__container__area__item__right_article">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
+                            現在参加させていただいている株式会社Regal core様のホームページをリニューアルのために作成させていただきました。<br>動きをつけたサイトとなっております。
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
@@ -367,7 +367,7 @@
                 <div class="work__container__area__item">
 
                     <div class="work__container__area__item__right">
-                        <h2 class="work__container__area__item__right_title">株式会社REGAL CORE様 ホームページ製作</h2>
+                        <h2 class="work__container__area__item__right_title">ENTER 公式サイトの作成</h2>
                         <p class="work__container__area__item__right_article">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
                         </p>
@@ -378,7 +378,7 @@
                         </div>
                     </div>                    
                     <div class="work__container__area__item__left">
-                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" >
+                        <img class="work__container__area__item__left_img" src="./assets/img/enter.png" alt="" >
                     </div>
                 </div>
                 <!-- item3 -->
