--- a/index.html
+++ b/index.html
@@ -369,7 +369,11 @@
                     <div class="work__container__area__item__right">
                         <h2 class="work__container__area__item__right_title">ENTER 公式サイトの作成</h2>
                         <p class="work__container__area__item__right_article">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
+                            私が運営する大学生プログラミングコミュニティ「ENTER」のWebサイトを制作いたしました。<br>
+                            エンジニア集団ということもあり黒や蛍光色の緑などで統一したデザインとなっております。<br>
+                            <br>
+                            <br>
+                            <a href="kohta9521.github.io/ENTER-website/">サイトはこちら</a>
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
@@ -384,12 +388,12 @@
                 <!-- item3 -->
                 <div class="work__container__area__item">
                     <div class="work__container__area__item__left">
-                        <img class="work__container__area__item__left_img" src="./assets/img/regal.png" alt="" >
+                        <img class="work__container__area__item__left_img" src="./assets/img/allives.png" alt="" >
                     </div>
                     <div class="work__container__area__item__right">
-                        <h2 class="work__container__area__item__right_title">株式会社REGAL CORE様 ホームページ製作</h2>
+                        <h2 class="work__container__area__item__right_title">ALLIVES 公式サイト作成</h2>
                         <p class="work__container__area__item__right_article">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis eveniet, voluptates nostrum, voluptatibus, consequatur eius beatae modi facere nobis et cupiditate animi doloremque numquam recusandae. Consequatur, quod? Obcaecati, qui sapiente.
+                            友人の起業する際のWebサイトを作成。したからスクロールして要素が出てきたり、背景が動いているように工夫しました。
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
