--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     <div class="work__container__area__item__right">
                         <h2 class="work__container__area__item__right_title">株式会社REGAL CORE様 ホームページ製作</h2>
                         <p class="work__container__area__item__right_article">
-                            現在参加させていただいている株式会社Regal core様のホームページをリニューアルのために作成させていただきました。<br>動きをつけたサイトとなっております。
+                            現在インターンとして参加させていただいている株式会社Regal core様のホームページをリニューアルのために作成させていただきました。<br>動きをつけたサイトとなっております。
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
@@ -393,7 +393,7 @@
                     <div class="work__container__area__item__right">
                         <h2 class="work__container__area__item__right_title">ALLIVES 公式サイト作成</h2>
                         <p class="work__container__area__item__right_article">
-                            友人の起業する際のWebサイトを作成。したからスクロールして要素が出てきたり、背景が動いているように工夫しました。
+                            友人の起業する際のWebサイトを作成。下からスクロールして要素が出てきたり、背景が動いているように見させるために工夫しました。
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
