add new title section in work

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <section class="work fixed" id="work">
         <div class="work__container">
             <div class="work__container__title">
-                <h2 class="work__container__title_item"><span class="about__container__title_span">03.</span>Some Things I’ve Built</h2>
+                <h2 class="work__container__title_item"><span class="about__container__title_span">03.</span>Work</h2>
             </div>
             <div class="work__container__area">
                 <!-- item1 -->
