--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                             エンジニア集団ということもあり黒や蛍光色の緑などで統一したデザインとなっております。<br>
                             <br>
                             <br>
-                            <a href="kohta9521.github.io/ENTER-website/">サイトはこちら</a>
+                            <a href="https://enter-university.com/">サイトはこちら</a>
                         </p>
                         <div class="work__container__area__item__right_lang">
                             <p class="work__container__area__item__right_lang_item">
